2001-10-13  Michael Hope  <michaelh@juju.net.nz>

	* src/SDCCval.c (constVal): Fixed usage of 'L' modifier problems on ppc.

	* support/regression/tests/longor.c: Added.

2001-10-11  Bernhard Held  <bernhard@bernhardheld.de>

	* as/mcs51/asdata.c: replaced FILENAME_MAX with PATH_MAX

	* as/mcs51/aslink.h: define PATH_MAX

	* as/mcs51/asm.h: define PATH_MAX

	* as/mcs51/asmain.c: replaced FILENAME_MAX with PATH_MAX

	* as/mcs51/asnoice.c: replaced FILENAME_MAX with PATH_MAX

	* as/mcs51/lklex.c: replaced FILENAME_MAX with PATH_MAX

	* as/mcs51/lkmain.c: replaced FILENAME_MAX with PATH_MAX

	* src/SDCCglobl.h: define PATH_MAX

	* src/SDCCmacro.c: replaced FILENAME_MAX with PATH_MAX

	* src/SDCCmain.c: replaced FILENAME_MAX with PATH_MAX

2001-10-11  Michael Hope  <michaelh@juju.net.nz>

	* src/z80/gen.c (gencjneshort): Fixed

	* src/z80/ralloc.c (packRegsForHLUse): Added pack into HL for cast then ipush.

2001-10-09  Michael Hope  <michaelh@juju.net.nz>

	* support/regression/tests/bug-469671.c: Added.

	* src/z80/gen.c (shiftIntoPair): Fixed up warning.

2001-10-08  Michael Hope  <michaelh@juju.net.nz>

	* src/SDCCmain.c: Added --fommit-frame-pointer option and implemented in the z80 port.

	* src/z80/gen.c (genPlus): Fixed to work with extended stack.  Also fixed genMinus, genCmp.  genUMinus is still left.

2001-10-08  Bernhar Held  <bernhard@bernhardheld.de>

	* src/SDCCmain.c (preProcess): added define SDCC_NOOVERLAY

	* src/device/lib/_mulint.c  : removed hint: nooverlay bug

	* src/device/lib/_mullong.c : removed hint: nooverlay bug

	* src/device/lib/_divuint.c : removed hint: nooverlay bug

	* src/device/lib/_divulong.c: removed hint: nooverlay bug

	* src/device/lib/_moduint.c : removed hint: nooverlay bug

	* src/device/lib/_modulong.c: removed hint: nooverlay bug

2001-10-07  Michael Hope  <michaelh@juju.net.nz>
